Fixed proposal.html for TA comments

--- a/proposal.html
+++ b/proposal.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="INFO340-aaa">
-        <meta name="description" content="description of your page">
+        <meta name="description" content="INFO 340 Group A1 Project Proposal Page">
         <title>INFO 340 AA Group A Project Proposal</title>
         <link rel="stylesheet" href="css/proposal.css">
     </head>
@@ -14,18 +14,18 @@
     <body>
         <div class="container">
             <h1>INFO 340 AA Group A Project Proposal</h1>
-        <problem-section>
+        <section>
             <h2>Problem/Data Domain:</h2>
             <p>We intend to create a web app for fantasy football. Currently, it is one of the most popular hobbies to enjoy with a group of friends who enjoy watching football. It involves drafting real world players, and having scores correlated to how they perform in their games each week. A league is formed amongst friends for a season-long competition that involves a prize for the winner and a punishment for the loser in the end.</p>
             <p>The problem nowadays is that there are too many different fantasy apps and different people may prefer different ones which would make it complicated to make a league together, for example ESPN and Yahoo each have a unique fantasy platform. Within our own friends, we had a disagreement between which one to use which caused lots of issues and almost led us to not play at all. We believe that we can create a successful app that everyone can enjoy, and less arguing but more playing can happen. We hope to bring people together in one centralized place where they can all get functionality and enjoyment out of it they need, while trying to leave some of the less popular features and flaws behind.</p>
-        </problem-section>
+        </section>
 
-        <app-desc-section>
+        <section>
             <h2>App Description:</h2>
             <p>The users of the app will be anyone who wants to play fantasy football. They will use the app to play in a league with whomever they desire, whether it be friends, family, or strangers. It will be for entertainment and enjoyment purposes, and hopefully bring a group of people together for a friendly competition. It will be interactive because users will need to join a league with their friends. Over the course of the season, they will set their lineups each week. This involves finding players they want to swap in and out of their team. Users will be able to view their scores for the week, while also looking at the history of scores. This way users try to use the information at hand to try and make the best lineup possible to win. Our app will be simple to use, and not be overcrowded with lots of unnecessary features that some of the common apps today may have. The goal is for our app to be usable by all users, from the hard-core football fans, to the everyday person who just wants to play for fun.</p>
-        </app-desc-section>
+        </section>
 
-        <data-section>
+        <section>
             <h3>Data:</h3>
             <ul>
                 <li><a href="https://fantasydata.com/nfl/fantasy-football-leaders?season=2023&seasontype=1&scope=1&subscope=1&startweek=5&endweek=5&aggregatescope=1&range=3">Fantasy Football Stats and Season Leaders | FantasyData</a></li>
@@ -33,7 +33,7 @@
                 <li><a href="https://www.pro-football-reference.com/years/2023/fantasy.htm">2023 NFL Fantasy Rankings | Pro Football Reference</a></li>
                 <li>(plenty of places to get data)</li>
             </ul>
-        </data-section>
+        </section>
         </div>
     </body>
 </html>
