--- a/schedule.html
+++ b/schedule.html
@@ -3,14 +3,77 @@
     <!-- Page Info -->
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="INFO340-aaa">
-        <meta name="description" content="INFO 340 Group A1 Project">
-        <title>INFO 340 AA Group A Project</title>
+        <meta name="author" content="Tom Jubin">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Schedule page for fantasy football">
+        <title>Schedule</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <!-- Page Content -->
     <body>
-        
+        <h1>Fantasy Football Schedule</h1>
+    
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Week</th>
+                    <th>Matchup</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>9/10/23</td>
+                    <td>Week 1</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>9/17/23</td>
+                    <td>Week 2</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>9/24/23</td>
+                    <td>Week 3</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>10/1/23</td>
+                    <td>Week 4</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>10/8/23</td>
+                    <td>Week 5</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>10/15/23</td>
+                    <td>Week 6</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>10/22/23</td>
+                    <td>Week 7</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>10/29/23</td>
+                    <td>Week 8</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>11/5/23</td>
+                    <td>Week 9</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>11/12/23</td>
+                    <td>Week 10</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
