worked on nav bar content

--- a/index.html
+++ b/index.html
@@ -3,14 +3,44 @@
     <!-- Page Info -->
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="INFO340-aaa">
-        <meta name="description" content="INFO 340 Group A1 Project">
-        <title>INFO 340 AA Group A Project</title>
+        <meta name="author" content="Trevor Wong">
+        <meta name="description" content="INFO 340 Group A1 Project Main Page">
+        <title>INFO 340 AA Group A: Fantasy Football</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <!-- Page Content -->
     <body>
+       <header>
+            <nav>
+                <!-- Page Logo -->
+                <a href="index.html"><img src="" alt="Home"></a>
+                <!-- tab to different pages -->
+                <ul>
+                    <li>
+                        <a href="league.html">League</a>
+                    </li>
+                    <li>
+                        <a href="schedule.html">Schedule</a>
+                    </li>
+                    <li>
+                        <a href="matchup.html">Matchup</a>
+                    </li>
+                    <li>
+                        <a href="players.html">Players</a>
+                    </li>
+                </ul>
+            </nav>
+       </header>
        
+       <!-- main content -->
+       <main>
+
+       </main>
+
+       <!-- footer content -->
+       <footer>
+
+       </footer>
     </body>
 </html>
