added barebones navbar in index.html (add to other pages later)

--- a/index.html
+++ b/index.html
@@ -7,40 +7,51 @@
         <meta name="description" content="INFO 340 Group A1 Project Main Page">
         <title>INFO 340 AA Group A: Fantasy Football</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
 
     <!-- Page Content -->
     <body>
-       <header>
-            <nav>
-                <!-- Page Logo -->
-                <a href="index.html"><img src="" alt="Home"></a>
-                <!-- tab to different pages -->
-                <ul>
-                    <li>
-                        <a href="league.html">League</a>
-                    </li>
-                    <li>
-                        <a href="schedule.html">Schedule</a>
-                    </li>
-                    <li>
-                        <a href="matchup.html">Matchup</a>
-                    </li>
-                    <li>
-                        <a href="players.html">Players</a>
-                    </li>
-                </ul>
-            </nav>
-       </header>
+        <nav>
+            <!-- Page Logo -->
+            <a href="index.html"><img src="imgs/FantasyFootballLogo.png" alt="Home"></a>
+            <!-- tab to different pages -->
+            <ul>
+                <li>
+                    <a href="league.html">League</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="matchup.html">Matchup</a>
+                </li>
+                <li>
+                    <a href="players.html">Players</a>
+                </li>
+            </ul>
+        </nav>
+        <header>
+            <h1>Fantasy Football</h1>
+        </header>
        
-       <!-- main content -->
-       <main>
+        <!-- main content -->
+        <main>
+            <div class="Homepage">
+                <div class="myTeam">
+                    <!-- My team -->
+                </div>
+                <div class="dashboard">
+                    <!-- Dashboard -->
+                </div>
+            </div>
+            
+        </main>
 
-       </main>
+        <!-- footer content -->
+        <footer>
 
-       <!-- footer content -->
-       <footer>
-
-       </footer>
+        </footer>
     </body>
 </html>
