--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="INFO 340 Group A1 Project Main Page">
         <title>INFO 340 AA Group A: Fantasy Football</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
 
@@ -40,10 +40,13 @@
         <main>
             <div class="Homepage">
                 <div class="myTeam">
-                    <!-- My team -->
+                    <h2>My Team</h2>
+                    <p>Record</p>
+                    <p>Last Matchup</p>
+                    <p>Next Matchup</p>
                 </div>
                 <div class="dashboard">
-                    <!-- Dashboard -->
+                    <h2>Dashboard</h2>
                 </div>
             </div>
             
