homepage edits for myTeam and dashboard

--- a/index.html
+++ b/index.html
@@ -44,12 +44,35 @@
             <div class="Homepage">
                 <div class="myTeam">
                     <h2>My Team</h2>
-                    <p>Record</p>
-                    <p>Last Matchup</p>
-                    <p>Next Matchup</p>
+                    <div class="myTeamSummary">
+                        <div class="myTeamRecord">
+                            <p>Record</p>
+                            <!-- add record here -->
+                        </div>
+                        <div class="myTeamLastMatchup">
+                            <p>Last Matchup</p>
+                            <!-- add last matchup here -->
+                        </div>
+                        <div class="myTeamNextMatchup">
+                            <p>Next Matchup</p>
+                            <!-- add next matchup here -->
+                        </div>
+                        
+                    </div>
                 </div>
-                <div class="dashboard">
+                <div class="dashboardContainer">
                     <h2>Dashboard</h2>
+                    <div class="dashboard">
+                        <div class="dash-overview">
+                            <h3>Overview</h3>
+                        </div>
+                        <div class="dash-ranks">
+                            <h3>Ranks</h3>
+                        </div>
+                        <div class="dash-myStats">
+                            <h3>My Stats</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
             
