--- a/schedule.html
+++ b/schedule.html
@@ -12,8 +12,34 @@
 
     <!-- Page Content -->
     <body>
-        <h1>Fantasy Football Schedule</h1>
-    
+        <nav>
+            <!-- Page Logo -->
+            <a href="index.html"><img src="imgs/FantasyFootballLogo.png" alt="Home"></a>
+            <!-- tab to different pages -->
+            <ul>
+                <li>
+                    <a href="league.html">League</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="matchup.html">Matchup</a>
+                </li>
+                <li>
+                    <a href="players.html">Players</a>
+                </li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+            </ul>
+        </nav>
+        <header>
+            <h1>Fantasy Football Schedule</h1>
+        </header>
+        
+        <div class = Tschedule>
+
         <table>
             <thead>
                 <tr>
@@ -73,7 +99,45 @@
                     <td>Week 10</td>
                     <td>Your team vs. Opponent</td>
                 </tr>
+                <tr>
+                    <td>11/19/23</td>
+                    <td>Week 11</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>11/26/23</td>
+                    <td>Week 12</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>12/3/23</td>
+                    <td>Week 13</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>12/10/23</td>
+                    <td>Week 14</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>12/17/23</td>
+                    <td>Week 15</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>12/24/23</td>
+                    <td>Week 16</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
+                <tr>
+                    <td>12/31/23</td>
+                    <td>Week 17</td>
+                    <td>Your team vs. Opponent</td>
+                </tr>
             </tbody>
         </table>
+
+    </div>
+
     </body>
 </html>
