--- a/players.html
+++ b/players.html
@@ -5,12 +5,18 @@
         <meta charset="utf-8">
         <meta name="author" content="INFO340-aaa">
         <meta name="description" content="INFO 340 Group A1 Project">
-        <title>INFO 340 AA Group A Project</title>
+        <title>Players Page</title>
+        <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <!-- Page Content -->
+    
     <body>
+        <h1>Players</h1>
         
     </body>
 </html>
