--- a/league.html
+++ b/league.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <!-- Page Logo -->
+        <a href="index.html"><img src="imgs/FantasyFootballLogo.png" alt="Home"></a>
+        <!-- tab to different pages -->
+        <ul>
+            <li>
+                <a href="league.html">League</a>
+            </li>
+            <li>
+                <a href="schedule.html">Schedule</a>
+            </li>
+            <li>
+                <a href="matchup.html">Matchup</a>
+            </li>
+            <li>
+                <a href="players.html">Players</a>
+            </li>
+            <li>
+                <a href="login.html">Login</a>
+            </li>
+        </ul>
+    </nav>
 
 <h1>STANDINGS</h1>
 
