--- a/league.html
+++ b/league.html
@@ -47,8 +47,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>Team 1</td>
-                <td>Player Name</td>
+                <td>Team Chiefs</td>
+                <td>Anshul</td>
                 <td>5-1-0</td>
                 <td>.833</td>
                 <td>-</td>
@@ -56,8 +56,8 @@
             </tr>
 
             <tr>
-                <td>Team 1</td>
-                <td>Player Name</td>
+                <td>Team Seahawks</td>
+                <td>Tom</td>
                 <td>5-1-0</td>
                 <td>.833</td>
                 <td>-</td>
@@ -65,15 +65,14 @@
             </tr>
 
             <tr>
-                <td>Team 1</td>
-                <td>Player Name</td>
+                <td>Team Eagles</td>
+                <td>Christopher</td>
                 <td>5-1-0</td>
                 <td>.833</td>
                 <td>-</td>
                 <td>843.18</td>
             </tr>
 
-            <!-- More Rows Applicable -->
         </tbody>
     </table>
 </section>
@@ -93,8 +92,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>Team 2</td>
-                <td>Player Name</td>
+                <td>Team Bills</td>
+                <td>Trevor</td>
                 <td>5-1-0</td>
                 <td>.833</td>
                 <td>-</td>
@@ -102,32 +101,15 @@
             </tr>
 
             <tr>
-                <td>Team 2</td>
-                <td>Player Name</td>
+                <td>Team Rams</td>
+                <td>Michael Penix</td>
                 <td>5-1-0</td>
                 <td>.833</td>
                 <td>-</td>
                 <td>815.04</td>
             </tr>
 
-            <tr>
-                <td>Team 2</td>
-                <td>Player Name</td>
-                <td>5-1-0</td>
-                <td>.833</td>
-                <td>-</td>
-                <td>815.04</td>
-            </tr>
 
-            <tr>
-                <td>Team 2</td>
-                <td>Player Name</td>
-                <td>5-1-0</td>
-                <td>.833</td>
-                <td>-</td>
-                <td>815.04</td>
-            </tr>
-            <!-- More Rows Applicable -->
         </tbody>
     </table>
 </section>
