added favicon to all pages

--- a/proposal.html
+++ b/proposal.html
@@ -6,7 +6,9 @@
         <meta name="author" content="INFO340-aaa">
         <meta name="description" content="INFO 340 Group A1 Project Proposal Page">
         <title>INFO 340 AA Group A Project Proposal</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <link rel="stylesheet" href="css/proposal.css">
+        <link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
     </head>
 
     
