--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Schedule page for fantasy football">
         <title>Schedule</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
     </head>
 
     <!-- Page Content -->
