--- a/league.html
+++ b/league.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Anshul Karanam">
     <title>Fantasy Football Standings</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -37,6 +37,7 @@
     <table>
         <thead>
             <tr>
+                <th>Logo</th>
                 <th>Team</th>
                 <th>Owner</th>
                 <th>Record</th>
@@ -47,6 +48,7 @@
         </thead>
         <tbody>
             <tr>
+                <td><img src="imgs/appleLogo.png" alt="Team Logo"></td>
                 <td>Team Chiefs</td>
                 <td>Anshul</td>
                 <td>5-1-0</td>
@@ -56,6 +58,7 @@
             </tr>
 
             <tr>
+                <td><img src="imgs/dolphinLogo.png" alt="Team Logo"></td>
                 <td>Team Seahawks</td>
                 <td>Tom</td>
                 <td>5-1-0</td>
@@ -65,6 +68,7 @@
             </tr>
 
             <tr>
+                <td><img src="imgs/sandwichLogo.png" alt="Team Logo"></td>
                 <td>Team Eagles</td>
                 <td>Christopher</td>
                 <td>5-1-0</td>
@@ -82,6 +86,7 @@
     <table>
         <thead>
             <tr>
+                <td><img src="imgs/dogLogo.png" alt="Team Logo"></td>
                 <th>Team</th>
                 <th>Owner</th>
                 <th>Record</th>
@@ -92,6 +97,7 @@
         </thead>
         <tbody>
             <tr>
+                <td><img src="imgs/starLogo.png" alt="Team Logo"></td>
                 <td>Team Bills</td>
                 <td>Trevor</td>
                 <td>5-1-0</td>
@@ -101,6 +107,7 @@
             </tr>
 
             <tr>
+                <td><img src="imgs/dinoLogo.png" alt="Team Logo"></td>
                 <td>Team Rams</td>
                 <td>Michael Penix</td>
                 <td>5-1-0</td>
