--- a/league.html
+++ b/league.html
@@ -51,7 +51,7 @@
         <tbody>
             <tr>
                 <td><img src="imgs/appleLogo.png" alt="Team Logo"></td>
-                <td>Team Chiefs</td>
+                <td>Team Apple</td>
                 <td>Anshul</td>
                 <td>5-1-0</td>
                 <td>.833</td>
@@ -61,7 +61,7 @@
 
             <tr>
                 <td><img src="imgs/dolphinLogo.png" alt="Team Logo"></td>
-                <td>Team Seahawks</td>
+                <td>Team Dolphins</td>
                 <td>Tom</td>
                 <td>5-1-0</td>
                 <td>.833</td>
@@ -71,7 +71,7 @@
 
             <tr>
                 <td><img src="imgs/sandwichLogo.png" alt="Team Logo"></td>
-                <td>Team Eagles</td>
+                <td>Team Sandwich</td>
                 <td>Christopher</td>
                 <td>5-1-0</td>
                 <td>.833</td>
@@ -88,7 +88,7 @@
     <table>
         <thead>
             <tr>
-                <td><img src="imgs/dogLogo.png" alt="Team Logo"></td>
+                <th>Logo</th>
                 <th>Team</th>
                 <th>Owner</th>
                 <th>Record</th>
@@ -100,7 +100,7 @@
         <tbody>
             <tr>
                 <td><img src="imgs/starLogo.png" alt="Team Logo"></td>
-                <td>Team Bills</td>
+                <td>Team Stars</td>
                 <td>Trevor</td>
                 <td>5-1-0</td>
                 <td>.833</td>
@@ -110,7 +110,17 @@
 
             <tr>
                 <td><img src="imgs/dinoLogo.png" alt="Team Logo"></td>
-                <td>Team Rams</td>
+                <td>Team Dino</td>
+                <td>Michael Penix</td>
+                <td>5-1-0</td>
+                <td>.833</td>
+                <td>-</td>
+                <td>815.04</td>
+            </tr>
+
+            <tr>
+                <td><img src="imgs/dogLogo.png" alt="Team Logo"></td>
+                <td>Team Dog</td>
                 <td>Michael Penix</td>
                 <td>5-1-0</td>
                 <td>.833</td>
