--- a/league.html
+++ b/league.html
@@ -111,7 +111,7 @@
             <tr>
                 <td><img src="imgs/dinoLogo.png" alt="Team Logo"></td>
                 <td>Team Dino</td>
-                <td>Michael Penix</td>
+                <td>Nick Saban</td>
                 <td>5-1-0</td>
                 <td>.833</td>
                 <td>-</td>
