added css styling for matchup

--- a/matchup.html
+++ b/matchup.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/x-icon" href="imgs/favicon.ico" />
     </head>
 
     <!-- Page Content -->
@@ -46,9 +47,9 @@
             <table>
                 <tr>
                     <th>Your Team</th>
-                    <th>Score</th>
+                    <th>Score: Total</th>
                     <th>Opponent</th>
-                    <th>Score</th>
+                    <th>Score: Total</th>
                 </tr>
                 <tr>
                     <td>Player 1</td>
