--- a/schedule.html
+++ b/schedule.html
@@ -140,6 +140,9 @@
         </table>
 
     </div>
+    <footer>
+        &copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a>
 
+    </footer>
     </body>
 </html>
