--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
         <!-- footer content -->
         <footer>
+            &copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a>
 
         </footer>
     </body>
