--- a/players.html
+++ b/players.html
@@ -69,6 +69,9 @@
         
 
 
-        
+        <footer>
+            &copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a>
+
+        </footer>
     </body>
 </html>
