--- a/login.html
+++ b/login.html
@@ -33,7 +33,9 @@
                 </li>
             </ul>
         </nav>
-        <h1>Login</h1>
+        <header>
+            <h1>Login</h1>
+        </header>
         <main>
             <form>
                 <div class="login">
@@ -42,13 +44,12 @@
                   <label for="password_input">Password:</label>
                   <input id="password_input" type="password" name="password">
                 </div>
-                <button type="submit"><i class="fas fa-pencil-alt" aria-label="Submit"></i></button>
+                <button type="submit">Enter<i aria-label="Submit"></i></button>
               </form>
         </main>
 
         <footer>
-            &copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a>
-
+            <p>&copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a></p>
         </footer>
 
 
