--- a/players.html
+++ b/players.html
@@ -18,7 +18,6 @@
     <!-- Page Content -->
     
     <body>
-        <h1>Players</h1>
         <nav>
             <!-- Page Logo -->
             <a href="index.html"><img src="imgs/FantasyFootballLogo.png" alt="Home"></a>
@@ -41,6 +40,9 @@
                 </li>
             </ul>
         </nav>
+        <header>
+            <h1>Players</h1>
+        </header>
         <div class="container mt-5">
             <div class="row" id="player-cards">
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -70,8 +72,7 @@
 
 
         <footer>
-            &copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a>
-
+            <p>&copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a></p>
         </footer>
     </body>
 </html>
