--- a/schedule.html
+++ b/schedule.html
@@ -141,8 +141,7 @@
 
     </div>
     <footer>
-        &copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a>
-
+        <p>&copy; 2023 Fantasy Football Standings. All rights reserved. | <a href="mailto:contact@fantasyfootball.com">contact@fantasyfootball.com</a></p>
     </footer>
     </body>
 </html>
