--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
             </ul>
         </nav>
-        <header>
+        <header class="homeHeader">
             <h1>Fantasy Football</h1>
         </header>
        
