--- a/players.html
+++ b/players.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="author" content="INFO340-aaa">
         <meta name="description" content="INFO 340 Group A1 Project">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <title>Players Page</title>
         <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
