minor changes from draft 1

--- a/project-draft/index.html
+++ b/project-draft/index.html
@@ -3,7 +3,7 @@
     <!-- Page Info -->
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Trevor Wong">
+        <meta name="author" content="Trevor Wong, Tom Jubin, Anshul Karanam, Christopher Chen">
         <meta name="description" content="INFO 340 Group A1 Project Main Page">
         <title>340 Fantasy Football</title>
         <link rel="stylesheet" href="css/style.css">
