--- a/project-draft/players.html
+++ b/project-draft/players.html
@@ -3,8 +3,8 @@
     <!-- Page Info -->
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="INFO340-aaa">
-        <meta name="description" content="INFO 340 Group A1 Project">
+        <meta name="author" content="Christopher Chen">
+        <meta name="description" content="INFO 340 Group A1 Project Players Page">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Players Page</title>
