minor draft 1 changes

--- a/project-draft/league.html
+++ b/project-draft/league.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Anshul Karanam">
+    <meta name="description" content="A web app for fantasy football. Currently, it is one of the most popular hobbies to enjoy with a group of friends who enjoy watching football. It involves drafting real world players, and having scores correlated to how they perform in their games each week. A league is formed amongst friends for a season-long competition that involves a prize for the winner and a punishment for the loser in the end.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fantasy Football Standings</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
