--- a/project-draft/players.html
+++ b/project-draft/players.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Christopher Chen">
-        <meta name="description" content="INFO 340 Group A1 Project Players Page">
+        <meta name="description" content="A web app for fantasy football. Currently, it is one of the most popular hobbies to enjoy with a group of friends who enjoy watching football. It involves drafting real world players, and having scores correlated to how they perform in their games each week. A league is formed amongst friends for a season-long competition that involves a prize for the winner and a punishment for the loser in the end.">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Players Page</title>
