--- a/project-draft/login.html
+++ b/project-draft/login.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Trevor Wong">
-        <meta name="description" content="INFO 340 Group A1 Project Login">
+        <meta name="description" content="A web app for fantasy football. Currently, it is one of the most popular hobbies to enjoy with a group of friends who enjoy watching football. It involves drafting real world players, and having scores correlated to how they perform in their games each week. A league is formed amongst friends for a season-long competition that involves a prize for the winner and a punishment for the loser in the end.">
         <title>340 Fantasy Football Log In</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
