--- a/project-draft/schedule.html
+++ b/project-draft/schedule.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="author" content="Tom Jubin">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Schedule page for fantasy football">
+        <meta name="description" content="A web app for fantasy football. Currently, it is one of the most popular hobbies to enjoy with a group of friends who enjoy watching football. It involves drafting real world players, and having scores correlated to how they perform in their games each week. A league is formed amongst friends for a season-long competition that involves a prize for the winner and a punishment for the loser in the end.">
         <title>Schedule</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind">
         <link rel="stylesheet" href="css/style.css">
