draft 1 changes for resubmission

--- a/project-draft/matchup.html
+++ b/project-draft/matchup.html
@@ -107,6 +107,13 @@
                 </tr>
             </table>
             </div>
+
+            <form>
+                <label for="addPlayer">Add Player:</label>
+                <input type="text" id="addPlayer" placeholder="Enter player name" required>
+                <button type="button">Add Player</button>
+            </form>
+
         </main>
 
         <!-- footer content -->
