--- a/project-draft/players.html
+++ b/project-draft/players.html
@@ -42,33 +42,37 @@
                 </li>
             </ul>
         </nav>
+
         <header>
             <h1>Players</h1>
         </header>
+
         <div class="container mt-5">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <img src=" https://library.sportingnews.com/styles/twitter_card_120x120/s3/2021-10/patrick-mahomes-020221-getty-ftrjpg_1cd4z4o4rotcf1hqbou86f7lru.jpg?itok=uDvRkiGV" class="card-img-top" alt="Player name">
-                        <div class="card-body">
-                            <h2 class="card-title">Patrick Mahomes</h2>
-                            <p class="card-text">QB - Kanasas City Chiefs</p>
-                            <p class="card-text">Additional info or stats</p>
-                        </div>
+        <div class="row">
+            <!-- Player 1 -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <img src="https://library.sportingnews.com/styles/twitter_card_120x120/s3/2021-10/patrick-mahomes-020221-getty-ftrjpg_1cd4z4o4rotcf1hqbou86f7lru.jpg?itok=uDvRkiGV" class="card-img-top" alt="Player name">
+                    <div class="card-body">
+                        <h2 class="card-title">Patrick Mahomes</h2>
+                        <p class="card-text">QB - Kansas City Chiefs</p>
+                        <p class="card-text">Additional info or stats</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <img src="https://cdn.vox-cdn.com/thumbor/LSFpoGLta6--lVonJLt1tV5G384=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/24018462/usa_today_19037371.jpg" class="card-img-top" alt="Player name">
-                                <h2 class="card-title">Geno Smith</h2>
-                                <p class="card-text">QB - Seattle Seahawks</p>
-                                <p class="card-text">Additional info or stats</p>
-                            </div>
-                        </div>
-                    </div>
-                
             </div>
+
+            <!-- Player 2 -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <img src="https://cdn.vox-cdn.com/thumbor/LSFpoGLta6--lVonJLt1tV5G384=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/24018462/usa_today_19037371.jpg" class="card-img-top" alt="Player name">
+                    <div class="card-body">
+                        <h2 class="card-title">Geno Smith</h2>
+                        <p class="card-text">QB - Seattle Seahawks</p>
+                        <p class="card-text">Additional info or stats</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         
 
