added player form

--- a/project-draft/players.html
+++ b/project-draft/players.html
@@ -75,6 +75,21 @@
         </div>
         </div>
         
+        <div>
+            <form id="playerForm">
+                <label for="addPlayer">Player Name:</label>
+                <input type="text" id="addPlayer" placeholder="Enter player name" required/>
+                <label for="yards">Yards:</label>
+                <input type="number" id="yards" placeholder="Enter yards" />
+                <label for="touchdowns">Touchdowns:</label>
+                <input type="number" id="touchdowns" placeholder="Enter touchdowns" />
+                <label for="position">Position:</label>
+                <input type="text" id="position" placeholder="Enter position" />
+                <label for="team">Team:</label>
+                <input type="text" id="team" placeholder="Enter team name" />
+                <button type="button" onclick="addPlayer()">Add Player</button>
+            </form>
+        </div>
 
 
         <footer>
