--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="author" content="Trevor Wong, Tom Jubin, Anshul Karanam, Christopher Chen" />
-    <meta name="description" content="INFO 340 Group A1 Project" />
+    <meta name="description" content="INFO 340 Group A1 Fantasy Football Project" />
     <title>340 Fantasy Football</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Public+Sans|Outfit|Hind" />
@@ -21,7 +21,6 @@
     -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
